--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NEREUS_API_KEY: ${{ secrets.API_KEY }}
+      NEREUS_API_URL: ${{ secrets.API_URL }}
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
